--- a/render.yaml
+++ b/render.yaml
@@ -4,23 +4,28 @@ services:
     env: node
     plan: starter
     buildCommand: yarn install && yarn build
-    startCommand: rsync -a public/ /data/public/ && yarn start
+    startCommand: yarn start
     healthCheckPath: /_health
     autoDeploy: false
     disk:
-      name: strapi-data
-      mountPath: /data
+      name: strapi-uploads
+      mountPath: /opt/render/project/src/public/uploads
       sizeGB: 1
     envVars:
       - key: NODE_VERSION
         value: ~16.13.0
       - key: NODE_ENV
         value: production
-      - key: DATABASE_FILENAME
-        value: /data/strapi.db
+      - key: DATABASE_URL
+        fromDatabase:
+          name: strapi
+          property: connectionString
       - key: JWT_SECRET
         generateValue: true
       - key: ADMIN_JWT_SECRET
         generateValue: true
       - key: APP_KEYS
         generateValue: true
+databases:
+  - name: strapi
+    plan: starter
