--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,12 @@ services:
     env: node
     plan: starter
     buildCommand: yarn install && yarn build
-    startCommand: yarn start
+    startCommand: rsync -a public/ /data/public/ && yarn start
     healthCheckPath: /_health
     autoDeploy: false
     disk:
-      name: strapi-uploads
-      mountPath: /opt/render/project/src/public/uploads
+      name: strapi-data
+      mountPath: /data
       sizeGB: 1
     envVars:
       - key: NODE_VERSION
